Navbar contains logo now (still not fixed to top) Buttons need aligning havent worked with this much
 Fixed issue with Serial-dilution flask generation simply appending flasks to end of preexisting (i.e. put 5, 5 new flasks appended, hit next again 5 more flasks without reset)

 External standards page functionality being implemented, now generates number of flasks based on num of standards entered (in a similar way to serial dilution)
 ^^^^Not complete

--- a/calibration-standards/calibrationStyle.css
+++ b/calibration-standards/calibrationStyle.css
@@ -13,6 +13,8 @@ html{
 }
 
 td{
+    padding-left: 5px;
+    padding-right: 5px;
     border: none;
     cursor: auto;
 }
@@ -49,6 +51,7 @@ html,body{
     width: 80%;
 }
 #divContainer{
+    width: 550px;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
@@ -58,6 +61,11 @@ html,body{
 /* Answer page style */
 #answerDiv{
     text-align: center;
+}
+
+.dilutionFlask{
+    position: relative;
+    width:225px;
 }
 
 #arrowContainer{
@@ -101,8 +109,4 @@ html,body{
 }
 
 
-.dilutionFlask{
-    position: relative;
-    width:225px;
-}
 
